--- a/app/views/layouts/customers.html.erb
+++ b/app/views/layouts/customers.html.erb
@@ -1,8 +1,8 @@
 <% content_for :menu_bar do %>
         <ul id="subnav" class="selfclear">
-          <li><%= link_to "Active Customers", :action=>:index %></li>
-          <li><%= link_to "All Customers", :action=>:all %></li>
-          <li><%= link_to "New Customer", :action=>:new %></li>
+          <li><%= link_to translate_helper("active_customers_link_text"), :action=>:index %></li>
+          <li><%= link_to translate_helper("all_customers_link_text"), :action=>:all %></li>
+          <li><%= link_to translate_helper("new_customer_link_text"), :action=>:new %></li>
         </ul>
 <% end %>
 
