--- a/app/views/layouts/runs.html.erb
+++ b/app/views/layouts/runs.html.erb
@@ -1,6 +1,6 @@
 <% content_for :menu_bar do %>
         <ul id="subnav" class="selfclear">
-          <li><%= link_to "View Runs", :action=>:index %></li>
+          <li><%= link_to translate_helper("view_runs_link_text"), :action=>:index %></li>
         </ul>
 <% end %>
 
