--- a/app/views/layouts/repeating_trips.html.erb
+++ b/app/views/layouts/repeating_trips.html.erb
@@ -1,6 +1,6 @@
 <% content_for :menu_bar do %>
         <ul id="subnav" class="selfclear">
-          <li><%= link_to "View Repeating Trips", :action=>:index %></li>
+          <li><%= link_to translate_helper("view_repeating_trips_link_text"), :action=>:index %></li>
         </ul>
 <% end %>
 
