--- a/app/views/layouts/trips.html.erb
+++ b/app/views/layouts/trips.html.erb
@@ -1,10 +1,10 @@
 <% content_for :menu_bar do %>
         <ul id="subnav" class="selfclear">
-          <li><%= link_to 'New Trip', new_trip_path %></li>
-          <li><%= link_to "View Trips", :action=>:index %></li>
-          <li><%= link_to "Unscheduled Trips", :action=>:unscheduled %></li>
-          <li><%= link_to "Trips Requiring Callback", :action=>:trips_requiring_callback %></li>
-          <li><%= link_to "Reconcile Cab Log", :action=>:reconcile_cab %></li>
+          <li><%= link_to translate_helper("new_trip_link_text"), new_trip_path %></li>
+          <li><%= link_to translate_helper("view_trips_link_text"), :action=>:index %></li>
+          <li><%= link_to translate_helper("unscheduled_trips_link_text"), :action=>:unscheduled %></li>
+          <li><%= link_to translate_helper("trips_requiring_callback_link_text"), :action=>:trips_requiring_callback %></li>
+          <li><%= link_to translate_helper("reconcile_cab_log_link_text"), :action=>:reconcile_cab %></li>
         </ul>
 <% end %>
 
