--- a/app/views/monthlies/new.html.erb
+++ b/app/views/monthlies/new.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>Create Monthly Report</h1>
+  <h1><%= translate_helper("new_monthly_heading") %></h1>
 </div>
 
 <%= render :partial=>"form" %>
