--- a/app/views/provider_ethnicities/new.html.erb
+++ b/app/views/provider_ethnicities/new.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>New Ethnicity</h1>
+  <h1><%=translate_helper("new_ethnicity_heading")%></h1>
 </div>
 
 <%= render 'form' %>
