--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -20,7 +20,7 @@
     <% else %>
 
       <% if @customer.activated_date %>
-        <strong>translate_helper("activated_date")</strong> <%= @customer.activated_date %>
+        <strong><%= translate_helper("activated_date") %></strong> <%= @customer.activated_date %>
       <% end %>
 
       <span class="separator">|</span>
