--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -172,7 +172,7 @@
         <li class="selfclear">
           <%= f.label :run_id, "Run:" %>
           <%= f.collection_select :run_id, @runs, :id, :label, :include_blank => true %>
-          <%= link_to_if @trip.run.present?, "", [:edit, @trip.run], :class => :details, :onclick => "window.open(this.href); return false;"  %>
+          <%= link_to("run", edit_run_path(@trip.run), :class => :details, :onclick => "window.open(this.href); return false;") if (@trip.run.present? && @trip.run.id.present?) %>
           <strong>OR</strong>
         </li>
       
