--- a/app/views/reports/cab.html.erb
+++ b/app/views/reports/cab.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>Reports: Cab Log</h1>
+  <h1><%= translate_helper("cab_log_heading") %></h1>
   <h3><%= @query.start_date.strftime("%B %Y") %></h3>
 </div>
 
@@ -7,19 +7,19 @@
   <fieldset class="select-month">
     <p>
       <%= f.date_select  :start_date, :discard_day=>true %>
-      <%= f.submit "Report" %>
+      <%= f.submit translate_helper("cab_report_submit") %>
     </p>
   </fieldset>
 <% end %>
 
 <table>
   <tr>
-    <th>Date & Time</th>
-    <th>Return</th>
-    <th>Name</th>
-    <th>Trip purpose</th>
-    <th>Pick-Up Point</th>
-    <th>Destination</th>
+    <th><%= translate_helper("date_and_time") %></th>
+    <th><%= translate_helper("return") %></th>
+    <th><%= translate_helper("name") %></th>
+    <th><%= translate_helper("trip_purpose") %></th>
+    <th><%= translate_helper("pick_up_point") %></th>
+    <th><%= translate_helper("destination") %></th>
   </tr>
   <% for trip in @trips %>
     <tr>
@@ -27,8 +27,8 @@
       <td></td>
       <td><%= trip.customer.name %></td>
       <td><%= trip.trip_purpose_name %></td>
-      <td><%= trip.pickup_address.try(:text) || '(Unspecified Address)' %></td>
-      <td><%= trip.dropoff_address.try(:text) || '(Unspecified Address)' %></td>
+      <td><%= trip.pickup_address.try(:text) || translate_helper("unspecified_address") %></td>
+      <td><%= trip.dropoff_address.try(:text) || translate_helper("unspecified_address") %></td>
     </tr>
     <% if trip.round_trip %>
       <tr>
@@ -36,8 +36,8 @@
         <td class="center">&#x2713;</td>
         <td><%= trip.customer.name %></td>
         <td><%= trip.trip_purpose_name %></td>
-        <td><%= trip.dropoff_address.try(:text) || '(Unspecified Address)' %></td>
-        <td><%= trip.pickup_address.try(:text) || '(Unspecified Address)' %></td>
+        <td><%= trip.dropoff_address.try(:text) || translate_helper("unspecified_address") %></td>
+        <td><%= trip.pickup_address.try(:text) || translate_helper("unspecified_address") %></td>
       </tr>
     <% end %>
   <% end %>
