--- a/app/views/cab_trips/index.html.erb
+++ b/app/views/cab_trips/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'cab_trips' %>
 <div id="page-header">
   <h1><%=translate_helper("listing_cab_runs")%></h1>
 </div>
