--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'customers' %>
 <div id="page-header">
   <h1><%=translate_helper("customer_listing")%></h1>
 </div>
