--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: false, tab_class: 'vehicles-drivers-users' %>
 <div id="page-header">
   <h1><%= translate_helper("show_provider_heading", provider: @provider.name) %></h1>
 </div>
