--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'trips' %>
 <div id="page-header">
   <h1>View Trips</h1>
   <%= render :partial => 'weekday_select' %>
