--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -70,7 +70,7 @@
       <td>
         <%= form_for(role, :url=>provider_change_role_path(@provider.id), :html => { :method => :post }) do |f| %>
           <%= f.hidden_field :id %>
-          <%= f.select :level, [["Admin", 100], ["Editor", 50], ["User", 0]] %>
+          <%= f.select :level, Role.editable_role_array_by_user(current_user) %>
           <%= f.submit translate_helper("change_role") %>
         <% end %>
       </td>
@@ -81,10 +81,8 @@
  </table>
 <% end %>
 
-<% if @provider == current_user.current_provider %>
+<% if is_add_user_allowed?(current_user) %>
   <p><%= link_to translate_helper("create_user_link_text"), new_user_path, :class=>'new-user action-bttn' %></p>
-<% else %>
-  <%= translate_helper("switch_providers_to_create_user", current_provider: current_user.current_provider.name, provider: @provider.name) %>
 <% end %>
 
 <hr />
