--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -24,7 +24,7 @@
       </li>
 
       <li>
-        <%= f.label :paid, translate_helper("driver_form_paid") %>
+        <%= f.label :paid, translate_helper("paid") %>
         <%= f.select :paid, [["Paid", "true"], ["Volunteer", "false"]], {:selected => @driver.paid.to_s} %>
       </li>
       
