--- a/app/views/runs/new.html.erb
+++ b/app/views/runs/new.html.erb
@@ -1,10 +1,10 @@
 <div id="page-header">
-  <h1>New Run</h1>
+  <h1><%= translate_helper("new_run_heading") %></h1>
 </div>
 
 <%= form_for @run do |f| %>
   <%= render "form", :f => f %>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit translate_helper("new_run_submit") %>
   </div>
 <% end %>
