--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,6 +1,6 @@
 <% if target.errors.any? %>
   <div class="error_explanation">
-    <h2><%= pluralize(target.errors.count, "error") %> prohibited this record from being saved:</h2>
+    <h2><%= translate_helper("generic_error_message", count: @target.errors.count)%></h2>
     <ul>
       <% target.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
